--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -97,6 +97,17 @@ a {
 #main {
   padding: 2rem;
   background-color: #f5f5f5;
+
+  .error-msg {
+    background: #b13a3a;
+    color: #fff;
+    font-size: 1.4rem;
+    padding: 1rem 2rem;
+    max-width: 50rem;
+    border-radius: 2rem;
+    margin: 1rem auto;
+    text-align: center;
+  }
 }
 
 #main-title-wrapper {
